--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,13 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+a{
+  color: black;
+  text-decoration: none
+}
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 99%;
+}
