--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <div class='d-flex justify-content-between mx-3'>
+        <%= image_tag "favpng_popcorn-cinema.png", alt: "popcorn", width: 50 %>
+        <div class= 'd-flex align-items-center'>
+          <a  href= <%=lists_path%> class='mx-2' >My lists</a>
+          <a  href= <%=new_list_path%> class='mx-2' >New list</a>
+        </div>
+    </div>
     <%= yield %>
   </body>
 </html>
