--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag "movie.png", alt: "movie",  class: "center" %>
 </div>
 <div class='container '>
-  <a href=<%=new_list_path%> class="btn btn-success m-3 ">Add list</a>
+  <a href=<%=new_list_path%> class="btn btn-success m-3 ">Add a list</a>
 </div>
 <div class='container'>
   <%@lists.each do |list| %>
